Add loops + improve examples

--- a/tutorial/00_introduction_to_python.ipynb
+++ b/tutorial/00_introduction_to_python.ipynb
@@ -107,6 +107,50 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "952280c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'strawberry' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;241m8\u001b[39m \u001b[38;5;241m+\u001b[39m \u001b[43mstrawberry\u001b[49m \u001b[38;5;241m*\u001b[39m\u001b[38;5;241m3\u001b[39m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'strawberry' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "8 + strawberry *3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "59ffd61e",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "can only concatenate str (not \"int\") to str",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mcookie\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43m \u001b[49m\u001b[38;5;241;43m7\u001b[39;49m\n",
+      "\u001b[0;31mTypeError\u001b[0m: can only concatenate str (not \"int\") to str"
+     ]
+    }
+   ],
+   "source": [
+    "'cookie' + 7"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "dadc7d2a",
    "metadata": {},
@@ -163,6 +207,69 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "9e4bdc17",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'kiwi'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\"kiwi\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "3e63ca52",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'banana'"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'banana'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "79aa3c2c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len('banana')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "4bab1ef8",
    "metadata": {},
@@ -196,6 +303,50 @@
    "source": [
     "name = \"Bella\"\n",
     "name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "5bdb6f14",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Amsterdam'"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "city = \"Amsterdam\"\n",
+    "city"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "d592492c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "year = 5\n",
+    "year"
    ]
   },
   {
@@ -265,6 +416,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "ef399a08",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I live in Amsterdam for 5 years.\n"
+     ]
+    }
+   ],
+   "source": [
+    "life = \"I live in \" + city + \" for \" + str(year) + \" years.\"\n",
+    "print(life)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "4e6f4daa",
    "metadata": {},
@@ -288,6 +458,8 @@
     }
    ],
    "source": [
+    "# Guess the output\n",
+    "\n",
     "colour = \"pink\"\n",
     "print(colour * 5)"
    ]
@@ -307,6 +479,8 @@
     }
    ],
    "source": [
+    "# What is the type?\n",
+    "\n",
     "print(type(colour))"
    ]
   },
@@ -325,6 +499,8 @@
     }
    ],
    "source": [
+    "# What is the type?\n",
+    "\n",
     "print(type(5))"
    ]
   },
@@ -343,7 +519,23 @@
     }
    ],
    "source": [
+    "# What is the type?\n",
+    "\n",
     "print(type(5.1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e570ce89",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Do you think SOMETHING_PYTHON overwrites the value?\n",
+    "something_python='red'\n",
+    "SOMETHING_PYTHON='BLUE'\n",
+    "print(something_python)\n",
+    "print(SOMETHING_PYTHON)"
    ]
   },
   {
@@ -461,8 +653,261 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "ed383555",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['apricot', 'strawberry', 'melon', 'peach', 'peach']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# there can be duplicates as well\n",
+    "\n",
+    "fruits = [\"apricot\", \"strawberry\", \"melon\"]\n",
+    "fruits.append(\"peach\")\n",
+    "fruits.append(\"peach\")\n",
+    "print(fruits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "0481b4fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# how long is my list\n",
+    "print(len(fruits))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "a81e3af3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Bella', 5, True, 'Amsterdam']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# data types in the list\n",
+    "\n",
+    "personal = [\"Bella\", 5, True, \"Amsterdam\"]\n",
+    "print(personal)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "6ee9f7ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'list'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# what is the type?\n",
+    "\n",
+    "print(type(personal))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "49e0e70a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Amsterdam\n"
+     ]
+    }
+   ],
+   "source": [
+    "# access to an item in the list\n",
+    "print(personal[3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "4e3db80d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[True, 'Amsterdam']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# range of indexes\n",
+    "\n",
+    "print(personal[2:4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "5ca25759",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[24], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mpersonal\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m]\u001b[49m)\n",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "# what is the result?\n",
+    "print(personal[4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "dcb9d8f4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Amsterdam\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get the last item from the list\n",
+    "\n",
+    "print(personal[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "d9dbf089",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get the last second item from the list\n",
+    "\n",
+    "print(personal[-2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "f030f814",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Bella', 5]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get the first two item from the list\n",
+    "\n",
+    "print(personal[:2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "58da7388",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[True, 'Amsterdam']\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get the last two item from the list\n",
+    "\n",
+    "print(personal[2:])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "ce3a72c9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[5, True]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Get the last 3rd item but don't get the last item\n",
+    "\n",
+    "print(personal[-3:-1])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "99e19269",
+   "metadata": {},
+   "source": [
+    "Yay!! You have contributed the first module! You know the basics of Python programming now! Wohoo!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dd29d6e7",
    "metadata": {},
    "outputs": [],
    "source": []
