--- a/tutorial/01_Conditions.ipynb
+++ b/tutorial/01_Conditions.ipynb
@@ -33,6 +33,57 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "2dc629de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# True or false?\n",
+    "print(bool(\"Beautiful\"))\n",
+    "print(bool(61))\n",
+    "print(bool([\"melon\", \"kofte\", \"brownie\"]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "8453ff84",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# True or false?\n",
+    "\n",
+    "print(bool([]))\n",
+    "print(bool(\"\"))\n",
+    "print(bool(False))\n",
+    "print(bool(None))\n",
+    "print(bool(0))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "id": "dcd64ebd",
    "metadata": {},
    "outputs": [
@@ -45,6 +96,8 @@
     }
    ],
    "source": [
+    "# Is is True or False? \n",
+    "\n",
     "print(5>8)"
    ]
   },
@@ -63,6 +116,8 @@
     }
    ],
    "source": [
+    "# Is is True or False? \n",
+    "\n",
     "print(\"b\"==\"b\")"
    ]
   },
@@ -81,6 +136,8 @@
     }
    ],
    "source": [
+    "# Is is True or False? \n",
+    "\n",
     "print(8==4) # equals"
    ]
   },
@@ -99,6 +156,8 @@
     }
    ],
    "source": [
+    "# Is is True or False? \n",
+    "\n",
     "print(8!=4) # not equals"
    ]
   },
@@ -117,6 +176,7 @@
     }
    ],
    "source": [
+    "# Guess the output\n",
     "name = \"Bella\"\n",
     "job = \"programmer\"\n",
     "print(name==job)"
@@ -260,9 +320,379 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "80c68952",
+   "metadata": {},
+   "source": [
+    "# Exercise Fibonacci\n",
+    "\n",
+    "The Fibonacci sequence is a sequence in which each number is the sum of the two preceding ones.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "cbe7b94a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "8\n",
+      "13\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Print fibonacci numbers until 21\n",
+    "x = 0\n",
+    "y = 1\n",
+    "while x < 21:\n",
+    "    print(x)\n",
+    "    x, y = y, x+y"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0994fab3",
+   "metadata": {},
+   "source": [
+    " `while` condition is executed until the expression is correct"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3131e5d6",
+   "metadata": {},
+   "source": [
+    "# For Loop\n",
+    "\n",
+    "For statement iterates over the sequence.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "59440b17",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bmw\n",
+      "cadillac\n",
+      "jeep\n"
+     ]
+    }
+   ],
+   "source": [
+    "cars = [\"bmw\", \"cadillac\", \"jeep\"]\n",
+    "for a in cars:\n",
+    "  print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ef0eebf6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "c\n",
+      "a\n",
+      "d\n",
+      "i\n",
+      "l\n",
+      "l\n",
+      "a\n",
+      "c\n"
+     ]
+    }
+   ],
+   "source": [
+    "# You can also loop through a string\n",
+    "for x in \"cadillac\":\n",
+    "    print(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f4528658",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "This is the else :) \n"
+     ]
+    }
+   ],
+   "source": [
+    "for this_item in range(6):\n",
+    "  print(this_item)\n",
+    "else:\n",
+    "  print(\"This is the else :) \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "5e638a27",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "7\n",
+      "8\n",
+      "This is the else :) \n"
+     ]
+    }
+   ],
+   "source": [
+    "for this_item in range(6,9):\n",
+    "  print(this_item)\n",
+    "else:\n",
+    "  print(\"This is the else :) \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "7299ae99",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "jeep\n"
+     ]
+    }
+   ],
+   "source": [
+    "# For loops together with if conditions\n",
+    "\n",
+    "cars = [\"bmw\", \"cadillac\", \"jeep\"]\n",
+    "\n",
+    "for car in cars:\n",
+    "    if car == 'jeep': \n",
+    "        print(car)\n",
+    "        break\n",
+    "    else:\n",
+    "        print(\"Sorry honey!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "c8b04be3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Not this one!\n",
+      "Not this one!\n",
+      "Not this one!\n",
+      "Sorry honey!\n",
+      "Not this one!\n",
+      "Not this one!\n",
+      "Not this one!\n",
+      "Sorry honey!\n",
+      "My favorite car is jeep, and I love daisy\n"
+     ]
+    }
+   ],
+   "source": [
+    "# For loops together another foor loop \n",
+    "\n",
+    "cars = [\"bmw\", \"cadillac\", \"jeep\"]\n",
+    "flowers = [\"rose\", \"tulip\", \"daisy\"]\n",
+    "\n",
+    "\n",
+    "for car in cars:\n",
+    "    for flower in flowers:\n",
+    "        if car == 'jeep': \n",
+    "            if flower == 'daisy':\n",
+    "                print(\"My favorite car is \"+ car + \", and I love \"+ flower)\n",
+    "                break\n",
+    "        else:\n",
+    "            print(\"Not this one!\")\n",
+    "    else:\n",
+    "        print(\"Sorry honey!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "524c11d4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "too bad!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Guess the output\n",
+    "\n",
+    "my_dog_names = ['cookie', 'peanut', 'python']\n",
+    "for dog in my_dog_names:\n",
+    "    dog == 'good'\n",
+    "else:\n",
+    "    print('too bad!')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c17bf01a",
+   "metadata": {},
+   "source": [
+    "# Dictionaries\n",
+    "\n",
+    "Stores data in key:value pairs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "8c3fd1e0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Amsterdam\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Find the city value in the dictionary\n",
+    "\n",
+    "myself = {\n",
+    "  \"name\": \"Bella\",\n",
+    "  \"city\": \"Amsterdam\",\n",
+    "  \"year\": 2023\n",
+    "}\n",
+    "print(myself[\"city\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "277640cb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['kofte', 'shwarma', 'steak', 'fries']\n"
+     ]
+    }
+   ],
+   "source": [
+    "myself = {\n",
+    "  \"name\": \"Bella\",\n",
+    "  \"city\": \"Amsterdam\",\n",
+    "  \"year\": 2023,\n",
+    "  \"favorite_food\": [\"kofte\", \"shwarma\", \"steak\", \"fries\"]\n",
+    "}\n",
+    "print(myself[\"favorite_food\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "f2a8e781",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Star', 'age': 60, 'country': 'Turkiye', 'favorite_sport': ['kitesurfing', 'swimming', 'cycling']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Using with a dict keyword\n",
+    "\n",
+    "this_women = dict(name = \"Star\", age = 60, country = \"Turkiye\", favorite_sport=[\"kitesurfing\", \"swimming\", \"cycling\"])\n",
+    "print(this_women)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "76632591",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Length of the dictionary\n",
+    "\n",
+    "print(len(this_women))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "a7378d62",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Turkiye\n"
+     ]
+    }
+   ],
+   "source": [
+    "# show the country\n",
+    "\n",
+    "print(this_women['country'])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cc2b16c7",
+   "id": "4f366b8c",
    "metadata": {},
    "outputs": [],
    "source": []
