Updated the TODO list

--- a/tutorial/01_Conditions_Loops_Data_Types.ipynb
+++ b/tutorial/01_Conditions_Loops_Data_Types.ipynb
@@ -236,6 +236,8 @@
     }
    ],
    "source": [
+    "# Pay attention to the execution order\n",
+    "\n",
     "my_favorite_colour=\"pink\"\n",
     "if(my_favorite_colour==\"red\"):\n",
     "    print(\"The colour i like is red!!!\")\n",
@@ -324,7 +326,8 @@
    "id": "80c68952",
    "metadata": {},
    "source": [
-    "# Exercise Fibonacci\n",
+    "# TODO: move the exercise below and make it easy\n",
+    "# Exercise Calculator\n",
     "\n",
     "The Fibonacci sequence is a sequence in which each number is the sum of the two preceding ones.\n"
    ]
@@ -374,7 +377,9 @@
    "source": [
     "# For Loop\n",
     "\n",
-    "For statement iterates over the sequence.\n"
+    "For statement iterates over the sequence.\n",
+    "# Go over with mentors\n",
+    "TODO: Explain the foor loop why do we need it through a question. How would you print the cars in a different line?"
    ]
   },
   {
@@ -492,7 +497,36 @@
     }
    ],
    "source": [
-    "# For loops together with if conditions\n",
+    "# For loops together with if conditions \n",
+    "\n",
+    "cars = [\"bmw\", \"cadillac\", \"jeep\"]\n",
+    "\n",
+    "for car in cars:\n",
+    "    if car == 'jeep': \n",
+    "        print(car)\n",
+    "    else:\n",
+    "        print(\"Sorry honey!\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "39b9882b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sorry honey!\n",
+      "Sorry honey!\n",
+      "jeep\n"
+     ]
+    }
+   ],
+   "source": [
+    "# For loops together with if conditions \n",
+    "# TODO: maybe use another example\n",
     "\n",
     "cars = [\"bmw\", \"cadillac\", \"jeep\"]\n",
     "\n",
@@ -528,6 +562,7 @@
    ],
    "source": [
     "# For loops together another foor loop \n",
+    "# TODO: make more intuitive examples here. Ex. cars & tires\n",
     "\n",
     "cars = [\"bmw\", \"cadillac\", \"jeep\"]\n",
     "flowers = [\"rose\", \"tulip\", \"daisy\"]\n",
@@ -547,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 11,
    "id": "524c11d4",
    "metadata": {},
    "outputs": [
@@ -555,18 +590,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "too bad!\n"
+      "Yes!\n",
+      "Too bad!\n",
+      "Too bad!\n"
      ]
     }
    ],
    "source": [
-    "# Guess the output\n",
+    "# Guess the output. Read carefully!\n",
     "\n",
     "my_dog_names = ['cookie', 'peanut', 'python']\n",
     "for dog in my_dog_names:\n",
-    "    dog == 'good'\n",
-    "else:\n",
-    "    print('too bad!')"
+    "    if dog == 'Peanut':\n",
+    "        print('Yes!')\n",
+    "    elif dog == \"cookie\":\n",
+    "        print('Yes!')\n",
+    "    else:\n",
+    "        print('Too bad!')"
    ]
   },
   {
@@ -576,7 +616,10 @@
    "source": [
     "# Dictionaries\n",
     "\n",
-    "Stores data in key:value pairs"
+    "Stores data in key:value pairs\n",
+    "\n",
+    "TODO: explain dictionary here (set of variables)\n",
+    "# Go over with mentors"
    ]
   },
   {
@@ -606,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "id": "277640cb",
    "metadata": {},
    "outputs": [
@@ -630,28 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "f2a8e781",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "{'name': 'Star', 'age': 60, 'country': 'Turkiye', 'favorite_sport': ['kitesurfing', 'swimming', 'cycling']}\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Using with a dict keyword\n",
-    "\n",
-    "this_women = dict(name = \"Star\", age = 60, country = \"Turkiye\", favorite_sport=[\"kitesurfing\", \"swimming\", \"cycling\"])\n",
-    "print(this_women)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 15,
    "id": "76632591",
    "metadata": {},
    "outputs": [
@@ -666,12 +688,12 @@
    "source": [
     "# Length of the dictionary\n",
     "\n",
-    "print(len(this_women))\n"
+    "print(len(myself))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 17,
    "id": "a7378d62",
    "metadata": {},
    "outputs": [
@@ -679,14 +701,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Turkiye\n"
+      "Amsterdam\n"
      ]
     }
    ],
    "source": [
-    "# show the country\n",
+    "# show the city\n",
     "\n",
-    "print(this_women['country'])"
+    "print(myself['city'])"
    ]
   },
   {
@@ -695,7 +717,10 @@
    "id": "4f366b8c",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# TODO: add an example from the weather app with the same vairables\n",
+    "# TODO: create a dictionary with your details and print them"
+   ]
   }
  ],
  "metadata": {
@@ -714,7 +739,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
