--- a/tutorial/02_Functions.ipynb
+++ b/tutorial/02_Functions.ipynb
@@ -7,23 +7,64 @@
    "source": [
     "# Functions\n",
     "\n",
-    "Functions run only when they are called and executes the code inside in order."
+    "Functions run only when they are called and executes the code inside in order.\n",
+    "\n",
+    "# Add Mentor instructions\n",
+    "\n",
+    "f(x)=x+1\n",
+    "f(1)=2\n",
+    "f(4)=5\n",
+    "\n",
+    "# TODO: \n",
+    "- explain return\n",
+    "- explain indentation in one sentence"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "d493d4c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f(x):\n",
+    "      return x+1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "3a23fcc3",
+   "id": "4734d9be",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
    "source": [
-    "def my_first_function():\n",
-    "  print(\"Yesss! This is my first function!!\")"
+    "print(f(1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
+   "id": "3a23fcc3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# we can also print\n",
+    "\n",
+    "def my_function():\n",
+    "      print(\"Yesss! This is my function!!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "id": "7bde494d",
    "metadata": {},
    "outputs": [
@@ -31,30 +72,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Yesss! This is my first function!!\n"
+      "Yesss! This is my function!!\n"
      ]
     }
    ],
    "source": [
     "# calling a function\n",
     "\n",
-    "my_first_function()"
+    "my_function()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "a4ab6ada",
    "metadata": {},
    "outputs": [],
    "source": [
+    "# What do you think the output would be?\n",
+    "\n",
     "def hello_hello():\n",
     "  print(\"Hello World!!\" * 5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "aa9c1bf8",
    "metadata": {},
    "outputs": [
@@ -72,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "id": "361f4029",
    "metadata": {},
    "outputs": [],
@@ -83,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "id": "57503990",
    "metadata": {},
    "outputs": [
@@ -91,17 +134,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "My name is Selin and I like pink\n"
+      "My name is Bella and I like pink\n"
      ]
     }
    ],
    "source": [
-    "my_story(\"Selin\", \"pink\")"
+    "my_story(\"Bella\", \"pink\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "b72d28fe",
    "metadata": {},
    "outputs": [
@@ -109,14 +152,22 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The highest value in euro is btc\n"
+      "The highest value in euro is btc\n",
+      "The lowest value in euro is doge\n",
+      "The medium value in euro is eth\n"
      ]
     }
    ],
    "source": [
-    "# Arguments\n",
+    "# Arguments \n",
+    "# TODO: Explain arguments\n",
+    "\n",
     "def cryptocurrency_symbols(bitcoin, ethereum, dogecoin):\n",
-    "  print(\"The highest value in euro is \" + bitcoin)\n",
+    "        print(\"The highest value in euro is \" + bitcoin)\n",
+    "        print(\"The lowest value in euro is \" + dogecoin)\n",
+    "        print(\"The medium value in euro is \" + ethereum)\n",
+    "\n",
+    "\n",
     "\n",
     "cryptocurrency_symbols(bitcoin = \"btc\", dogecoin = \"doge\", ethereum = \"eth\")"
    ]
@@ -150,33 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "6990d751",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "10"
-      ]
-     },
-     "execution_count": 27,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Return values\n",
-    "\n",
-    "def sum(a):\n",
-    "    return 7 + a\n",
-    "\n",
-    "sum(a)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 19,
    "id": "350f7d87",
    "metadata": {},
    "outputs": [
@@ -184,9 +209,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "rose\n",
-      "leilac\n",
-      "daisy\n"
+      "milk\n",
+      "eggs\n",
+      "bread\n"
      ]
     }
    ],
@@ -194,16 +219,16 @@
     "# Return values\n",
     "\n",
     "\n",
-    "def show_the_flower(c):\n",
-    "    for a in c:\n",
-    "        print(a)\n",
+    "def show_groceries_list(items):\n",
+    "    for item in items:\n",
+    "        print(item)\n",
     "    \n",
-    "show_the_flower([\"rose\",\"leilac\",\"daisy\"])"
+    "show_groceries_list([\"milk\",\"eggs\",\"bread\"])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 21,
    "id": "56b2312f",
    "metadata": {},
    "outputs": [
@@ -212,7 +237,7 @@
      "output_type": "stream",
      "text": [
       "4\n",
-      "6\n",
+      "4\n",
       "5\n"
      ]
     }
@@ -221,12 +246,12 @@
     "# Return values\n",
     "\n",
     "\n",
-    "def how_many_letters(flowers):\n",
-    "    for a in flowers:\n",
-    "        print(len(a))\n",
+    "def how_many_letters(groceries_list):\n",
+    "    for item in groceries_list:\n",
+    "        print(len(item))\n",
     "      \n",
     "    \n",
-    "how_many_letters([\"rose\",\"leilac\",\"daisy\"])"
+    "how_many_letters([\"milk\",\"eggs\",\"bread\"])"
    ]
   },
   {
@@ -236,12 +261,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# TODO: update some exampla form the wetaher app\n",
+    "\n",
     "# While loop\n",
     "# Buy bitcoin until the bank account balance is not enough\n",
     "\n",
     "def buy_cryptocurrency(mybank_account_balance):\n",
     "    bitcoin=24512\n",
-    "    while mybank_account_balance > bitcoin:\n",
+    "    for mybank_account_balance > bitcoin:\n",
     "        mybank_account_balance = mybank_account_balance - bitcoin\n",
     "        print(\"Purchased a bitcoin!\")\n",
     "        print(\"mybank account balance is \" + str(mybank_account_balance))\n",
@@ -290,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
