--- a/tutorial/00_introduction_to_python.ipynb
+++ b/tutorial/00_introduction_to_python.ipynb
@@ -16,12 +16,14 @@
    "metadata": {},
    "source": [
     "# Numbers\n",
-    "The interpreter acts as a simple calculator: you can type an expression at it and it will write the value."
+    "The interpreter acts as a simple calculator: you can type an expression at it and it will write the value. \n",
+    "\n",
+    "TODO: explain what is interpreter & coding language."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "bb694049",
    "metadata": {},
    "outputs": [
@@ -31,7 +33,7 @@
        "10"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,9 +81,11 @@
    "metadata": {},
    "source": [
     "# Errors\n",
-    "A Python program can throw errors awhen a certain statement is not in accordance with the prescribed usage. If you try to program something is not possible, Python will give an error. For example execute the code below;\n",
+    "A Python program can throw errors when a certain statement is not in accordance with the prescribed usage. If you try to program something is not possible, Python will give an error. For example execute the code below;\n",
     "\n",
-    "0/9"
+    "0/9 \n",
+    "\n",
+    "TODO: Errors move to the next"
    ]
   },
   {
@@ -350,13 +354,32 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9bc6db12",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1642931074.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[3], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    TODO: add functions explanation\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "TODO: add functions explanation"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "4dfab9df",
    "metadata": {},
    "source": [
     "# Print\n",
     "\n",
-    "The print() is a function which prints the stated message to the screen, or other standard output device. The message can be a string, or any other object."
+    "The print() is a function which prints the stated message to the screen. The message can be a string, or any other object."
    ]
   },
   {
@@ -519,17 +542,26 @@
     }
    ],
    "source": [
-    "# What is the type?\n",
+    "# What is the type? TODO: remove this\n",
     "\n",
     "print(type(5.1))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "e570ce89",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "red\n",
+      "BLUE\n"
+     ]
+    }
+   ],
    "source": [
     "# Do you think SOMETHING_PYTHON overwrites the value?\n",
     "something_python='red'\n",
@@ -929,7 +961,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
