Update TODO list

--- a/tutorial/00_introduction_to_python.ipynb
+++ b/tutorial/00_introduction_to_python.ipynb
@@ -7,7 +7,9 @@
    "source": [
     "# Introduction to Python\n",
     "\n",
-    "Let's execute our first Python command. Click on the bottom section and click on \"Run\" button on the top\n"
+    "Let's execute our first Python command. Click on the bottom section and click on \"Run\" button on the top\n",
+    "\n",
+    "TODO Organizers: give short introduction\n"
    ]
   },
   {
@@ -544,7 +546,9 @@
    "source": [
     "# What is the type? TODO: remove this\n",
     "\n",
-    "print(type(5.1))"
+    "print(type(5.1))\n",
+    "\n",
+    "TODO Organizers: remove"
    ]
   },
   {
