--- a/tutorial/01_Conditions_Loops_Data_Types.ipynb
+++ b/tutorial/01_Conditions_Loops_Data_Types.ipynb
@@ -718,7 +718,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: add an example from the weather app with the same vairables\n",
+    "# TODO: add an example from the weather app with the same variables\n",
     "# TODO: create a dictionary with your details and print them"
    ]
   }
