--- a/tutorial/02_Functions.ipynb
+++ b/tutorial/02_Functions.ipynb
@@ -11,12 +11,13 @@
     "\n",
     "# Add Mentor instructions\n",
     "\n",
-    "f(x)=x+1\n",
-    "f(1)=2\n",
-    "f(4)=5\n",
+    "f(x)=x+1  \n",
+    "f(1)=2  \n",
+    "f(4)=5  \n",
     "\n",
-    "# TODO: \n",
+    "# TODO Organizers: \n",
     "- explain return\n",
+    "- simplify the function explanation\n",
     "- explain indentation in one sentence"
    ]
   },
