--- a/tutorial/00_introduction_to_python.ipynb
+++ b/tutorial/00_introduction_to_python.ipynb
@@ -7,9 +7,43 @@
    "source": [
     "# Introduction to Python\n",
     "\n",
-    "Let's execute our first Python command. Click on the bottom section and click on \"Run\" button on the top\n",
+    "Python is one of the world’s most used and most popular programming languages. It’s powerful, versatile, and easy to learn. Python is widely used in various applications, some notable ones:\n",
     "\n",
-    "TODO Organizers: give short introduction\n"
+    "- Web development\n",
+    "- Data Science\n",
+    "- Data analysis\n",
+    "- Machine learning\n",
+    "- Artificial Intelligence (AI)\n",
+    "- Scripting and tooling\n",
+    "\n",
+    "Many people say that **Python comes with batteries included.** It’s a fun way to state that it includes a comprehensive base library. In addition, because so many people use Python, hundreds of thousands of high-quality libraries and frameworks exist to get things done quickly and without hassle. You can do a lot with a little bit of Python code!\n",
+    "\n",
+    "Learning Python is a no-brainer, and I promise you will be up and running quickly with this Python tutorial. Regardless of your future in IT, it will be a helpful tool to have in your toolbox!\n",
+    "\n",
+    "For a complete list of references on Python for beginners, [check out the wiki of Python!](https://wiki.python.org/moin/BeginnersGuide/NonProgrammers)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94a2089f",
+   "metadata": {},
+   "source": [
+    "# Interpreter\n",
+    "\n",
+    "A python interpreter is a computer program that converts each high-level program statement into machine code.\n",
+    "An interpreter translates the command that you write out into code that the computer can understand.\n",
+    "\n",
+    "However, to better understand this definition, we must explain what high-level and low-level languages are.\n",
+    "\n",
+    "Computer programmers write in high-level programming languages. High-level languages are written closer to human language and allow programmers to focus on the command being written. Python is the most famous example of a high-level language.\n",
+    "\n",
+    "However, while high-level languages are relatively easy to understand by humans, the same cannot be said for machines. Machines only understand machine code or machine language, a language represented by strings of bits — 1s and 0s.\n",
+    "\n",
+    "As you can imagine, writing and reading a program as strings of 1s and 0s is extremely hard for human programmers. Imagine trying to memorize instructions as 1s and 0s!\n",
+    "\n",
+    "So how do we bridge the gap between what a human programmer writes and what the machine understands and thus executes? By using an interpreter.\n",
+    "\n",
+    "When using a Python interpreter, the programmer types in the command, the interpreter reads the command, evaluates it, prints the results, and then goes back to read the command."
    ]
   },
   {
@@ -18,9 +52,11 @@
    "metadata": {},
    "source": [
     "# Numbers\n",
+    "\n",
+    "\n",
     "The interpreter acts as a simple calculator: you can type an expression at it and it will write the value. \n",
     "\n",
-    "TODO: explain what is interpreter & coding language."
+    "Let's execute our first Python command. Click on the bottom section and click on \"Run\" button on the top"
    ]
   },
   {
@@ -83,16 +119,12 @@
    "metadata": {},
    "source": [
     "# Errors\n",
-    "A Python program can throw errors when a certain statement is not in accordance with the prescribed usage. If you try to program something is not possible, Python will give an error. For example execute the code below;\n",
-    "\n",
-    "0/9 \n",
-    "\n",
-    "TODO: Errors move to the next"
+    "A Python program can throw errors when a certain statement is not in accordance with the prescribed usage. If you try to program something is not possible, Python will give an error. For example execute the code below;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "d1057a60",
    "metadata": {},
    "outputs": [
@@ -103,7 +135,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[13], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;241;43m9\u001b[39;49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[38;5;241;43m0\u001b[39;49m\n",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39m9\u001b[39;49m\u001b[39m/\u001b[39;49m\u001b[39m0\u001b[39;49m\n",
       "\u001b[0;31mZeroDivisionError\u001b[0m: division by zero"
      ]
     }
@@ -154,6 +186,18 @@
    ],
    "source": [
     "'cookie' + 7"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0601f2dd",
+   "metadata": {},
+   "source": [
+    "You can see that Python already gives some kind of 'hint' why these commands throw an error.\n",
+    "\n",
+    "Not all hints are easy to read and they will require some knowledge on the types of erros there are and the naming conventions within Python.\n",
+    "\n",
+    "When in doubt, use Google!"
    ]
   },
   {
@@ -356,32 +400,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "9bc6db12",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (1642931074.py, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[3], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    TODO: add functions explanation\u001b[0m\n\u001b[0m              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
-   "source": [
-    "TODO: add functions explanation"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "4dfab9df",
    "metadata": {},
    "source": [
     "# Print\n",
     "\n",
-    "The print() is a function which prints the stated message to the screen. The message can be a string, or any other object."
+    "The print() is a function which prints the stated message to the screen. The message can be a string, or any other object.\n",
+    "\n",
+    "Whereas we have executed the cells above and they have printed their results. When you run your program in a **terminal**, executing your program will only print output if specified directly.\n",
+    "\n",
+    "A console (or ‘terminal’, or ‘command prompt’) is a textual way to interact with your OS, just as the ‘desktop’, in conjunction with your mouse, is the graphical way to interact your system.\n",
+    "\n",
+    "Below we will show how to print output to a terminal!"
    ]
   },
   {
@@ -531,28 +562,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "id": "d23e4dd7",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'float'>\n"
-     ]
-    }
-   ],
-   "source": [
-    "# What is the type? TODO: remove this\n",
-    "\n",
-    "print(type(5.1))\n",
-    "\n",
-    "TODO Organizers: remove"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "id": "e570ce89",
    "metadata": {},
@@ -636,7 +645,11 @@
    "id": "e3a6c15e",
    "metadata": {},
    "source": [
-    "We can also insert an item as the first position"
+    "We can also insert an item as the first position\n",
+    "\n",
+    "**Important to note** is that lists are \"zero-indexed\", meaning that we start counting from index number 0.\n",
+    "\n",
+    "If we want to get or add something to the first position, this is thus filled at list[0], whereas the second element is stored at list[1] etc."
    ]
   },
   {
@@ -731,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "a81e3af3",
    "metadata": {},
    "outputs": [
@@ -752,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "6ee9f7ed",
    "metadata": {},
    "outputs": [
@@ -772,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "49e0e70a",
    "metadata": {},
    "outputs": [
@@ -791,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 6,
    "id": "4e3db80d",
    "metadata": {},
    "outputs": [
@@ -811,7 +824,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "5ca25759",
    "metadata": {},
    "outputs": [
@@ -822,7 +835,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[24], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[43mpersonal\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m]\u001b[49m)\n",
+      "Cell \u001b[0;32mIn[7], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[39m# what is the result?\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[39mprint\u001b[39m(personal[\u001b[39m4\u001b[39;49m])\n",
       "\u001b[0;31mIndexError\u001b[0m: list index out of range"
      ]
     }
@@ -833,8 +846,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "23164772",
+   "metadata": {},
+   "source": [
+    "Why is this the case? Think about the \"zero-indexing\""
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "id": "dcb9d8f4",
    "metadata": {},
    "outputs": [
@@ -854,7 +875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "id": "d9dbf089",
    "metadata": {},
    "outputs": [
@@ -867,14 +888,14 @@
     }
    ],
    "source": [
-    "# Get the last second item from the list\n",
+    "# Get the second last item from the list\n",
     "\n",
     "print(personal[-2])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "id": "f030f814",
    "metadata": {},
    "outputs": [
@@ -894,7 +915,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "id": "58da7388",
    "metadata": {},
    "outputs": [
@@ -914,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "id": "ce3a72c9",
    "metadata": {},
    "outputs": [
@@ -939,14 +960,6 @@
    "source": [
     "Yay!! You have contributed the first module! You know the basics of Python programming now! Wohoo!"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dd29d6e7",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -965,7 +978,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.9.11"
   }
  },
  "nbformat": 4,
