changed I to we

--- a/tutorial/00_introduction_to_python.ipynb
+++ b/tutorial/00_introduction_to_python.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "Many people say that **Python comes with batteries included.** It’s a fun way to state that it includes a comprehensive base library. In addition, because so many people use Python, hundreds of thousands of high-quality libraries and frameworks exist to get things done quickly and without hassle. You can do a lot with a little bit of Python code!\n",
     "\n",
-    "Learning Python is a no-brainer, and I promise you will be up and running quickly with this Python tutorial. Regardless of your future in IT, it will be a helpful tool to have in your toolbox!\n",
+    "Learning Python is a no-brainer, and we promise you will be up and running quickly with this Python tutorial. Regardless of your future in IT, it will be a helpful tool to have in your toolbox!\n",
     "\n",
     "For a complete list of references on Python for beginners, [check out the wiki of Python!](https://wiki.python.org/moin/BeginnersGuide/NonProgrammers)\n"
    ]
