Enhanced functions intro

--- a/tutorial/02_Functions.ipynb
+++ b/tutorial/02_Functions.ipynb
@@ -7,52 +7,62 @@
    "source": [
     "# Functions\n",
     "\n",
-    "Functions run only when they are called and executes the code inside in order.\n",
+    "A function is a block of code that performs a specific task.\n",
     "\n",
-    "# Add Mentor instructions\n",
+    "Suppose, you need to create a program to create a circle and color it. You can create two functions to solve this problem:\n",
     "\n",
-    "f(x)=x+1  \n",
-    "f(1)=2  \n",
-    "f(4)=5  \n",
+    "- create a circle function\n",
+    "- create a color function\n",
     "\n",
-    "# TODO Organizers: \n",
-    "- explain return\n",
-    "- simplify the function explanation\n",
-    "- explain indentation in one sentence"
+    "Dividing a complex problem into smaller chunks makes our program easy to understand and reuse.\n",
+    "\n",
+    "## Types of function\n",
+    "There are two types of function in Python programming:\n",
+    "\n",
+    "- **Standard library functions** - These are built-in functions in Python that are available to use.\n",
+    "- **User-defined functions** - We can create our own functions based on our requirements.\n",
+    "\n",
+    "\n",
+    "## Python Function Declaration\n",
+    "The syntax to declare a function is:"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d493d4c8",
+   "id": "af367388",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def f(x):\n",
-    "      return x+1"
+    "def function_name(arguments):\n",
+    "    # function body \n",
+    "\n",
+    "    return"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "08c6a92f",
+   "metadata": {},
+   "source": [
+    "Here,\n",
+    "\n",
+    "- `def` - keyword used to declare a function\n",
+    "- `function_name` - any name given to the function\n",
+    "- `arguments` - any value passed to function\n",
+    "- `return (optional)` - returns value from a function\n",
+    "\n",
+    "\n",
+    "The return argument is optional, in the examples below we do not use it but make the function execute some code that prints a message\n",
+    "\n",
+    "Notice how the code after the colon is **indented**. <br>\n",
+    "This means that the line before the colon is active on all the indented lines, since we want to make sure our function runs all the code belonging to it, we should indent it all. <br>\n",
+    "This is the same with loops and if/else statement as we have seen before."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4734d9be",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(f(1))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
    "id": "3a23fcc3",
    "metadata": {},
    "outputs": [],
@@ -65,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "7bde494d",
    "metadata": {},
    "outputs": [
@@ -85,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "a4ab6ada",
    "metadata": {},
    "outputs": [],
@@ -98,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 5,
    "id": "aa9c1bf8",
    "metadata": {},
    "outputs": [
@@ -115,8 +125,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8b679211",
+   "metadata": {},
+   "source": [
+    "## Arguments\n",
+    "\n",
+    "You can also pass arguments to the function that specify some variables that make the function reusable with different values"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "id": "361f4029",
    "metadata": {},
    "outputs": [],
@@ -127,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "id": "57503990",
    "metadata": {},
    "outputs": [
@@ -145,7 +165,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
+   "id": "84c61a7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "My name is Tom and I like Blue\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_story(\"Tom\", \"Blue\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "id": "b72d28fe",
    "metadata": {},
    "outputs": [
@@ -160,9 +198,6 @@
     }
    ],
    "source": [
-    "# Arguments \n",
-    "# TODO: Explain arguments\n",
-    "\n",
     "def cryptocurrency_symbols(bitcoin, ethereum, dogecoin):\n",
     "        print(\"The highest value in euro is \" + bitcoin)\n",
     "        print(\"The lowest value in euro is \" + dogecoin)\n",
@@ -175,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 10,
    "id": "caa3bdee",
    "metadata": {},
    "outputs": [
@@ -190,7 +225,9 @@
     }
    ],
    "source": [
-    "# Default parameter value\n",
+    "# Default argument value\n",
+    "\n",
+    "# Here we set the default argument value, if we don't pass an argument value, the function takes the default one\n",
     "\n",
     "def cryptocurrency(value=\"24.512,5\"):\n",
     "  print(\"The value is \" + value)\n",
@@ -202,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "id": "350f7d87",
    "metadata": {},
    "outputs": [
@@ -219,7 +256,6 @@
    "source": [
     "# Return values\n",
     "\n",
-    "\n",
     "def show_groceries_list(items):\n",
     "    for item in items:\n",
     "        print(item)\n",
@@ -229,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 12,
    "id": "56b2312f",
    "metadata": {},
    "outputs": [
@@ -246,7 +282,6 @@
    "source": [
     "# Return values\n",
     "\n",
-    "\n",
     "def how_many_letters(groceries_list):\n",
     "    for item in groceries_list:\n",
     "        print(len(item))\n",
@@ -257,31 +292,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 13,
    "id": "1bedc29c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO: update some exampla form the wetaher app\n",
-    "\n",
     "# While loop\n",
     "# Buy bitcoin until the bank account balance is not enough\n",
     "\n",
     "def buy_cryptocurrency(mybank_account_balance):\n",
     "    bitcoin=24512\n",
-    "    for mybank_account_balance > bitcoin:\n",
+    "    while mybank_account_balance > bitcoin:\n",
     "        mybank_account_balance = mybank_account_balance - bitcoin\n",
     "        print(\"Purchased a bitcoin!\")\n",
     "        print(\"mybank account balance is \" + str(mybank_account_balance))\n",
     "    else:\n",
-    "        print(\"No balance left :(\")\n",
-    "\n",
-    "    "
+    "        print(\"No balance left :(\")\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "id": "ca3c64db",
    "metadata": {},
    "outputs": [
@@ -300,13 +331,183 @@
    "source": [
     "buy_cryptocurrency(50000)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "67af116f",
+   "metadata": {},
+   "source": [
+    "## Return statements\n",
+    "\n",
+    "A Python function may or may not return a value. If we want our function to return some value to a function call, we use the return statement. For example,\n",
+    "\n",
+    "```\n",
+    "def add_numbers():\n",
+    "    ...\n",
+    "    return sum\n",
+    "```\n",
+    "Here, we are returning the variable sum to the function call.\n",
+    "\n",
+    "**Note**: The return statement also denotes that the function has ended. Any code after return is not executed.\n",
+    "\n",
+    "In the examples below we will use the return statement to give back the result of a function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "d493d4c8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def f(x):\n",
+    "      return x+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "4734d9be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f(1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "f68806d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Square: 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "# function definition\n",
+    "def find_square(num):\n",
+    "    result = num * num\n",
+    "    return result\n",
+    "\n",
+    "# function call\n",
+    "square = find_square(3)\n",
+    "\n",
+    "print('Square:',square)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "eccf1e5a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sum:  9\n"
+     ]
+    }
+   ],
+   "source": [
+    "# function that adds two numbers\n",
+    "def add_numbers(num1, num2):\n",
+    "    sum = num1 + num2\n",
+    "    return sum\n",
+    "\n",
+    "# calling function with two values\n",
+    "result = add_numbers(5, 4)\n",
+    "\n",
+    "print('Sum: ', result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "94f59421",
+   "metadata": {},
+   "source": [
+    "## Benefits of Using Functions\n",
+    "\n",
+    "1. **Code Reusable** - We can use the same function multiple times in our program which makes our code reusable. For example,"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "7cda2d08",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Square of 1 = 1\n",
+      "Square of 2 = 4\n",
+      "Square of 3 = 9\n"
+     ]
+    }
+   ],
+   "source": [
+    "# function definition\n",
+    "def get_square(num):\n",
+    "    return num * num\n",
+    "\n",
+    "for i in [1,2,3]:\n",
+    "    # function call\n",
+    "    result = get_square(i)\n",
+    "    print('Square of',i, '=',result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ab7aa67a",
+   "metadata": {},
+   "source": [
+    "In the above example, we have created the function named get_square() to calculate the square of a number. Here, the function is used to calculate the square of numbers from 1 to 3.\n",
+    "\n",
+    "Hence, the same method is used again and again.\n",
+    "\n",
+    "2. **Code Readability** - Functions help us break our code into chunks to make our program readable and easy to understand."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b1bed605",
+   "metadata": {},
+   "source": [
+    "# Done!\n",
+    "\n",
+    "You have completed the last part of the intro to Python! <br>\n",
+    "You are now ready to start playing around with some more advanced stuff or build your own application.\n",
+    "\n",
+    "Feel free to look at the bonus exercises for a more in-depth view on Python functionalities or a little bit of challenge\n",
+    "\n",
+    "\n",
+    "For some more readings, take a look at the underlying resources:\n",
+    "- https://www.programiz.com/python-programming/function (this learning was based on this website)\n",
+    "- https://www.freecodecamp.org/news/functions-in-python-a-beginners-guide/\n",
+    "- https://www.youtube.com/watch?v=u-OmVr_fT4s"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "kyccddwb",
    "language": "python",
-   "name": "python3"
+   "name": "kyccddwb"
   },
   "language_info": {
    "codemirror_mode": {
@@ -318,7 +519,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
